samples/_failures_safe/1761043898_802d9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4d223f2.c: In function ‘main’:
./samples/SAFE/__tmp_d4d223f2.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_d4d223f2.c:200:9: error: expected declaration or statement at end of input
